--- a/staff.html
+++ b/staff.html
@@ -7,11 +7,12 @@
     <meta name="og:title" content="Educator LC" />
     <meta
       name="og:description"
-      content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, voluptatum? Pariatur, aliquid."
+      content="This website was created to fulfill Web Technology
+      module's requirements and does not represent an actual company or service"
     />
     <meta name="keywords" content="Educator LC, website" />
     <meta name="author" content="00013622" />
-    <title>Our Stuff</title>
+    <title>Our Staff</title>
     <link rel="stylesheet" href="../styles/global.css" />
     <link rel="stylesheet" href="../styles/stuff.css" />
   </head>
@@ -27,7 +28,7 @@
             class="banner-title"
             style="background-color: rgb(167, 36, 36); padding: 0.5% 0"
           >
-            Our stuff
+            Our Staff
           </h1>
         </div>
       </div>
