--- a/register.html
+++ b/register.html
@@ -7,7 +7,8 @@
     <meta name="og:title" content="Educator LC" />
     <meta
       name="og:description"
-      content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, voluptatum? Pariatur, aliquid."
+      content="This website was created to fulfill Web Technology
+      module's requirements and does not represent an actual company or service"
     />
     <meta name="keywords" content="Educator LC, website" />
     <meta name="author" content="00013622" />
